--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -1,16 +1,16 @@
-// $color--primary: #663399;
-// $color--primary-light: #bba0d6;
-// $color--primary-dark: #542c85;
+// $color--purple: #663399;
+// $color--purple-light: #bba0d6;
+// $color--purple-dark: #542c85;
 
-$color--primary: #c074cd;
-$color--primary-light: #d995e5;
-$color--primary-dark: #aa56b9;
-$color--secondary: #ffb74d;
-$color--secondary-light: #eecd9d;
-$color--secondary-dark: #db9833;
-$color--tertiary: #da84a4;
-$color--tertiary-light: #f8bbd0;
-$color--tertiary-dark: #e26f97;
+$color--purple: #913ea0;
+$color--purple-light: #eecff3;
+$color--purple-dark: #81338f;
+$color--orange: #ffb74d;
+$color--orange-light: #eecd9d;
+$color--orange-dark: #db9833;
+$color--pink: #da84a4;
+$color--pink-light: #f8bbd0;
+$color--pink-dark: #e26f97;
 $color--heading: #27212b;
 $color--text:#444;
 $color--link: #50237c;
