--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -69,7 +69,7 @@ footer.footer {
         width: 46px;
         height: 46px;
         border-radius: 999px;
-        background: $color--primary;
+        background: $color--purple;
         margin: 0 14px;
         display: flex;
         align-items: center;
@@ -77,7 +77,7 @@ footer.footer {
         transition: 0.1s;
 
         &:hover {
-          background: $color--primary-dark;
+          background: $color--purple-dark;
         }
 
         img {
