--- a/src/styles/partials/_navigation.scss
+++ b/src/styles/partials/_navigation.scss
@@ -12,7 +12,7 @@ nav {
   position: fixed;
   height: 78px;
   background: white;
-  transition: .5s;
+  transition: 0.5s;
 
   &.scroll {
     box-shadow: $shadow--one;
@@ -27,7 +27,6 @@ nav {
     .logo {
       img {
         width: 50px;
-        height: 50px;
       }
     }
   }
@@ -115,302 +114,13 @@ nav {
 }
 
 .menu {
-  transition: 0.2s;
-  position: absolute;
-  top: calc(100%);
-  margin: 0 auto;
-  z-index: 999;
-  border-radius: $radius--two;
-  background: white;
-  width: 90%;
-  left: 5%;
-  height: fit-content;
-  padding: 1rem;
-  margin-top: 1.6rem;
-  @include media-breakpoint-up(sm) {
-    padding: 1.5rem;
-  }
-  @include media-breakpoint-up(md) {
-    padding: 2.2rem;
-  }
-
-  visibility: hidden;
-  opacity: 0;
-  transition: transform 0.1s ease-out, opacity 0.1s ease-out, visibility 0s 0.1s;
-  transform: scale(0.95);
   display: flex;
-  flex-direction: column-reverse;
-  align-items: flex-start;
-  &.open {
-    transition: transform 0.1s ease-out, opacity 0.1s ease-out, visibility 0s 0s;
-    transform: scale(1);
-    visibility: visible;
-    opacity: 1;
-    box-shadow: $shadow--four;
+  justify-content: flex-end;
+  align-items: center;
 
-    .menu__main a.menu__item {
-      visibility: visible;
-    }
-  }
-
-  .menu__main {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    margin-bottom: auto;
-
-    a.menu__item {
-      visibility: hidden;
-      box-sizing: inherit;
-      display: block;
-      // align-items: flex-start;
-      text-decoration: none;
-      transition: 0.1s;
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      font-size: 1rem;
-      border-top: 1px solid $color--gray-two;
-      border-radius: 0;
-      color: $color--text;
-
-      &:hover {
-        color: $color--heading;
-      }
-
-      @include media-breakpoint-up(lg) {
-        visibility: visible;
-      }
-    }
-
-    .has-submenu {
-      margin-bottom: 2rem;
-
-      .menu__item {
-        font-size: 1.1rem;
-        font-weight: 600;
-        margin-bottom: 1rem;
-        display: block;
-        color: $color--text;
-      }
-    }
-
-    .menu__submenu {
-      a.submenu__item {
-        display: flex;
-        align-items: flex-start;
-        border-radius: $radius--one;
-        padding: 0.8rem 0.8rem 0.8rem;
-        text-decoration: none;
-        transition: 0.1s;
-        border-bottom: 1px solid $color--gray-two;
-        border-radius: 0;
-        padding-bottom: 12px;
-        padding-top: 18px;
-
-        &:first-of-type {
-          border-top-right-radius: 6px;
-          border-top-left-radius: 6px;
-          padding-top: 12px;
-        }
-
-        &:last-of-type {
-          border-bottom-right-radius: 6px;
-          border-bottom-left-radius: 6px;
-          border-bottom: none;
-          // padding-bottom: 0;
-        }
-
-        &:hover {
-          background: $color--gray-one;
-        }
-
-        img {
-          position: relative;
-          top: -8px;
-          margin-right: 8px;
-        }
-
-        .submenu__item--title {
-          font-size: 1.1rem;
-          color: $color--heading;
-          font-weight: bold;
-          margin-bottom: 6px;
-          margin-top: 0;
-        }
-
-        p {
-          font-size: 1rem;
-          line-height: 24px;
-          margin: 0;
-        }
-      }
-    }
-  }
-
-  @include media-breakpoint-up(lg) {
-    flex-direction: row;
-    visibility: visible;
-    opacity: 1;
-    transition: none;
-    transform: none;
-    justify-content: space-between;
-    background: transparent;
-    position: static;
-    height: 100%;
-    margin: 0;
-    min-height: 0;
-    padding: 0;
-    align-items: center;
-
-    .menu__main {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      margin-bottom: auto;
-      display: flex;
-      align-items: center;
-
-      a.menu__item,
-      span.menu__item,
-      .has-submenu .menu__item {
-        list-style-type: none;
-        text-decoration: none;
-        color: $color--heading;
-        font-weight: 400;
-        padding: 1rem;
-        transition: 0.1s;
-        font-size: 1.1rem;
-        border: none;
-        margin: 0;
-        margin-bottom: 0;
-        cursor: pointer;
-
-        &:hover {
-          color: $color--primary;
-        }
-      }
-
-      .has-submenu {
-        margin: 0;
-        position: relative;
-
-        &:hover span {
-          color: $color--primary;
-        }
-
-        &::after {
-          display: block;
-          content: "";
-          position: absolute;
-          width: 12px;
-          height: 12px;
-          transform: rotate(45deg);
-          background: #fff;
-          left: calc(50% + 2px);
-          visibility: hidden;
-          opacity: 0;
-          transition: 0.1s;
-          bottom: -12px;
-          transition: left 0.1s ease-out, bottom 0.1s ease-out, opacity 0.1s ease-out, visibility 0s 0.1s;
-        }
-
-        .menu__submenu {
-          position: absolute;
-          width: 500px;
-          max-width: 90vw;
-          top: 100%;
-          // padding-top: 14px;
-          margin: 0 auto;
-          z-index: 999;
-          left: -2rem;
-          display: block;
-          visibility: hidden;
-          opacity: 0;
-          transition: transform 0.1s ease-out, opacity 0.1s ease-out, visibility 0s 0.1s;
-          transform: scale(0.95);
-
-          .menu__submenu--wrapper {
-            background: #fff;
-            border-radius: $radius--two;
-            padding: 16px;
-            box-shadow: $shadow--three;
-          }
-        }
-
-        &:hover {
-          &::after {
-            opacity: 1;
-            visibility: visible;
-            bottom: -6px;
-            left: calc(50% - 6px);
-            transition: left 0.1s ease-out, bottom 0.1s ease-out, opacity 0.1s ease-out, visibility 0s 0s;
-          }
-          .menu__submenu {
-            transition: transform 0.1s ease-out, opacity 0.1s ease-out, visibility 0s 0s;
-            transform: scale(1);
-            visibility: visible;
-            opacity: 1;
-          }
-        }
-      }
-    }
-
-    .menu__cta {
-      flex-direction: row;
-      margin: 0;
-      margin-top: 2px;
-
-      p {
-        box-sizing: inherit;
-        font-size: 1rem;
-        color: $color--text;
-      }
-    }
-  }
-}
-
-.silo nav {
-  position: absolute;
-}
-
-.light-nav nav {
-  position: absolute;
-  .logo svg {
-    #mindtrust-text path,
-    #mindtrust-icon path,
-    #mindtrust-copyright path {
-      fill: #fff;
-    }
-
-    #mindtrust-icon > #mindtrust-shape-1,
-    #mindtrust-icon > #mindtrust-shape-3 {
-      fill: rgba(255, 255, 255, 0.35);
-    }
-
-    #mindtrust-icon > #mindtrust-center-shape {
-      fill: rgba(255, 255, 255, 0.5);
-    }
-  }
-
-  .menu .menu__main .menu__item {
-    color: #ffffffcc;
-
-    &:hover {
-      color: #ffffff;
-    }
-  }
-
-  .menu .menu__main .has-submenu {
-    &:hover span {
-      color: #fff;
-    }
-  }
-
-  .menu .menu__cta p {
-    color: #ffffff;
-  }
-
-  .mobile-menu__toggle span {
-    background: $color--gray-one;
+  .btn {
+    margin-right: 0;
+    padding-top: 12.5px;
+    padding-bottom: 11px;
   }
 }
