--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -19,11 +19,8 @@
       z-index: 1;
     }
 
-    .text {
-      width: fit-content;
-      padding: 1rem 0;
-      margin-top: -1rem;
-      background: white;
+    h1 {
+      line-height: 76px;
     }
   }
 
