Add SVG desktop thing and more

--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -5,12 +5,12 @@
 $color--purple: #913ea0;
 $color--purple-light: #eecff3;
 $color--purple-dark: #81338f;
-$color--orange: #ffb74d;
+$color--orange: #faaf40;
 $color--orange-light: #eecd9d;
-$color--orange-dark: #db9833;
-$color--pink: #da84a4;
+$color--orange-dark: #e0761f;
+$color--pink: #e76e9b;
 $color--pink-light: #f8bbd0;
-$color--pink-dark: #e26f97;
+$color--pink-dark: #d65b86;
 $color--heading: #27212b;
 $color--text:#444;
 $color--link: #50237c;
