--- a/src/styles/partials/_buttons.scss
+++ b/src/styles/partials/_buttons.scss
@@ -7,7 +7,7 @@
   color: #ffffff;
   border-radius: $radius--one;
   border: none;
-  padding: 17px 24px 14px;
+  padding: 18px 24px 15px;
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
@@ -22,24 +22,71 @@
   font-family: "Rubik", "Raleway";
   font-weight: 600;
   letter-spacing: 1px;
+  transition: 0.2s;
 
-  background-image: linear-gradient(to bottom right, $color--purple-dark, $color--pink, $color--orange);
+  background-image: linear-gradient(to bottom right, $color--purple-dark, $color--pink 30%, $color--orange);
+  background-image: linear-gradient(to bottom right, $color--purple, #{$color--pink} 40%, #{$color--orange});
+
   background-repeat: repeat-x;
   background-repeat: repeat-y;
-  background-size: 100% 90px;
-  background-position: 0 -30px;
+  background-size: calc(100% + 200px) 90px;
+  background-position: -200px 0;
 
   &:hover {
-    // background: linear-gradient(to bottom left, $color--purple-dark, $color--pink-dark, $color--orange-dark);
-    background-position: 0 0;
     box-shadow: $shadow--one;
+    background-position: -70px 0;
   }
 
   &.outlined {
-    background: transparent;
-    color: $color--purple-dark;
-    border: 1px solid $color--purple-dark;
     padding: 16px 24px 13px;
+    background-image: linear-gradient(to bottom right, $color--purple, #{$color--pink} 40%, #{$color--orange});
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    $border: 2px;
+    position: relative;
+    background-repeat: repeat-x;
+    background-repeat: repeat-y;
+    background-size: calc(100% + 200px) 90px;
+    background-position: -200px 0;
+
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+      margin: -$border; /* !importanté */
+      border-radius: inherit; /* !importanté */
+      background-image: linear-gradient(to bottom right, $color--purple, #{$color--pink} 40%, #{$color--orange});
+      background-repeat: repeat-x;
+      background-repeat: repeat-y;
+      background-size: calc(100% + 200px) 90px;
+      background-position: -200px 0;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+      border-radius: 4px; /* !importanté */
+      background: white;
+      width: calc(100%);
+      height: calc(100%);
+    }
+
+    &:hover {
+      background-position: -70px 0;
+
+      &:before {
+        background-position: -70px 0;
+      }
+    }
   }
 
   &.social {
