--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -21,6 +21,74 @@
 
     h1 {
       line-height: 76px;
+
+      span {
+        font-family: inherit;
+        font-weight: inherit;
+        font-size: inherit;
+
+        background: linear-gradient(to bottom right, $color--purple-dark, $color--pink, $color--orange);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+    }
+
+    .image__wrapper {
+      perspective: 1000px;
+      margin: 4em auto;
+      width: 100%;
+      margin-bottom: 500px;
+
+      margin-left: -40px;
+
+      @include media-breakpoint-up(md) {
+        width: 85%;
+        margin-left: -60px;
+      }
+
+      @include media-breakpoint-up(md) {
+        width: 120%;
+        margin-left: -20px;
+      }
+    }
+
+    .image__wrapper:hover .image__inner {
+      transform: rotateY(-14deg) rotateX(0deg);
+    }
+
+    .image__inner {
+      transition: 0.3s;
+      transform: rotateY(-24deg);
+      position: relative;
+    }
+
+    .image__inner figure {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      left: 0;
+      height: 100%;
+      z-index: 0;
+
+      image {
+        position: relative;
+        top: 50px;
+      }
+
+      svg {
+        box-shadow: $shadow--three;
+      }
+
+      &:nth-of-type(2) {
+        top: -32px;
+        left: 55%;
+        z-index: 1;
+        width: 50%;
+        height: 50%;
+        svg {
+          box-shadow: $shadow--four, $shadow--two;
+        }
+      }
     }
   }
 
@@ -33,24 +101,83 @@
     }
 
     .feature {
-      text-align: left;
-      padding: 18px 24px;
-      box-shadow: $shadow--two;
-      border-radius: $radius--two;
+      padding: 4rem 0;
 
-      img {
-        width: 70px;
-        filter: hue-rotate(-10deg);
-        margin-bottom: 14px;
+      .feature__image {
+        width: 100%;
+        border-radius: $radius--one;
+        border: 2px solid #e8e8e8;
+        box-shadow: 20px 20px 0px 0px #{$color--orange}20;
+      }
+
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 16px;
+        grid-row-gap: 16px;
+      }
+
+      .image-one {
+        grid-area: 1 / 1 / 2 / 2;
+        box-shadow: 20px 20px 0px 0px #{$color--orange}50 !important;
+      }
+      .image-two {
+        grid-area: 1 / 2 / 2 / 3;
+        box-shadow: 20px 20px 0px 0px #{$color--pink}50 !important;
+      }
+      .image-three {
+        grid-area: 2 / 1 / 3 / 2;
+        box-shadow: 20px 20px 0px 0px #{$color--purple}50 !important;
+      }
+      .image-four {
+        grid-area: 2 / 2 / 3 / 3;
+        box-shadow: 20px 20px 0px 0px #{$color--orange}50 !important;
+      }
+
+      .icon {
+        border-radius: $radius--two;
+        // background-image: linear-gradient(to bottom right, #000, #222, #555);
+        background-image: linear-gradient(to bottom right, #{$color--orange-dark}, #{$color--orange-dark}aa, #{$color--orange-dark}90);
+        width: 60px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;
+        box-shadow: $shadow--three;
+
+        &.one {
+          background-image: linear-gradient(to bottom right, #{$color--orange-dark}, #{$color--orange-dark}aa, #{$color--orange-dark}90);
+        }
+
+        &.two {
+          background-image: linear-gradient(to bottom right, #{$color--purple-dark}, #{$color--purple-dark}aa, #{$color--purple-dark}90);
+        }
+
+        &.three {
+          background-image: linear-gradient(to bottom right, #{$color--pink-dark}, #{$color--pink-dark}aa, #{$color--pink-dark}90);
+        }
+
+        img {
+          width: 45px;
+          height: 45px;
+          filter: grayscale(1) invert(1);
+        }
       }
 
       h3 {
         margin-top: 0;
-        margin-bottom: 14px;
+        margin-bottom: 16px;
       }
 
       p {
-        margin-bottom: 0;
+        margin: 0;
+
+        span {
+          font-weight: bold;
+          font-family: inherit;
+        }
       }
     }
   }
