--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -148,109 +148,142 @@
         box-shadow: 20px 20px 0px 0px #{$color--pink}20;
       }
 
-      .image__wrapper {
-        perspective: 1000px;
-        margin: 4em auto;
-        box-sizing: border-box;
-        width: 100%;
-        margin-bottom: 420px;
-        margin-left: -20px;
-        width: 80%;
+      &:nth-of-type(1) {
+        .col-md-6 {
+          figure {
+            box-shadow: $shadow--three;
+            width: 76%;
+
+            &:nth-of-type(2) {
+              position: relative;
+              left: 40%;
+              width: 90%;
+              top: -200px;
+              box-shadow: $shadow--four;
+            }
+          }
+
+          &::after {
+            width: 49px;
+            height: 170px;
+            display: block;
+            position: absolute;
+            content: "";
+            background-image: url("/media/img/icons/icon--arrow.svg");
+            top: 40%;
+            transform: scaleX(-1) rotate(48deg) scale(.8);
+            left: 29%;
+            filter: invert(.6) hue-rotate(200deg);
+            // transform: rotate(20deg);
+          }
+        }
       }
 
-      @include media-breakpoint-up(md) {
-        .image__wrapper:hover {
-          .image__inner {
-            transform: rotateY(5deg);
-            width: 100%;
+      &:nth-of-type(2) {
+        .image__wrapper {
+          perspective: 1000px;
+          margin: 4em auto;
+          box-sizing: border-box;
+          width: 100%;
+          margin-bottom: 420px;
+          margin-left: -20px;
+          width: 80%;
+        }
 
-            figure {
-              position: absolute;
-              top: 0;
-              left: 0;
-              // width: 50%;
+        @include media-breakpoint-up(md) {
+          .image__wrapper:hover {
+            .image__inner {
+              transform: rotateY(5deg);
+              width: 100%;
 
-              &:nth-of-type(2) {
-                top: 34px;
-                left: 34px;
-                width: 103%;
-              }
-              &:nth-of-type(3) {
-                top: 70px;
-                left: 70px;
-                width: 107%;
-              }
-              &:nth-of-type(4) {
-                top: 110px;
-                left: 110px;
-                width: 110%;
+              figure {
+                position: absolute;
+                top: 0;
+                left: 0;
+                // width: 50%;
 
-                svg {
-                  box-shadow: $shadow--four;
+                &:nth-of-type(2) {
+                  top: 34px;
+                  left: 34px;
+                  width: 103%;
+                }
+                &:nth-of-type(3) {
+                  top: 70px;
+                  left: 70px;
+                  width: 107%;
+                }
+                &:nth-of-type(4) {
+                  top: 110px;
+                  left: 110px;
+                  width: 110%;
+
+                  svg {
+                    box-shadow: $shadow--four;
+                  }
                 }
               }
             }
           }
         }
-      }
 
-      .image__inner {
-        transition: 0.3s;
-        transform: rotateY(14deg);
-        position: relative;
-        top: -64px;
-      }
-
-      .image__inner figure {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        left: 0;
-        height: 50%;
-        z-index: 0;
-        transition: 0.2s;
-
-        // @include media-breakpoint-up(md) {
-        //   width: 50%;
-        // }
-
-        image {
+        .image__inner {
+          transition: 0.3s;
+          transform: rotateY(14deg);
           position: relative;
-          top: 50px;
+          top: -64px;
         }
 
-        svg {
-          box-shadow: $shadow--three;
+        .image__inner figure {
+          position: absolute;
+          top: 0;
+          width: 100%;
+          left: 0;
+          height: 50%;
+          z-index: 0;
           transition: 0.2s;
-        }
 
-        &:nth-of-type(2) {
-          top: 30px;
-          left: 30px;
-          z-index: 1;
-          height: 50%;
-          svg {
-            box-shadow: $shadow--three;
+          // @include media-breakpoint-up(md) {
+          //   width: 50%;
+          // }
+
+          image {
+            position: relative;
+            top: 50px;
           }
-        }
 
-        &:nth-of-type(3) {
-          top: 60px;
-          left: 60px;
-          z-index: 2;
-          height: 50%;
           svg {
             box-shadow: $shadow--three;
+            transition: 0.2s;
           }
-        }
 
-        &:nth-of-type(4) {
-          top: 90px;
-          left: 90px;
-          z-index: 3;
-          height: 50%;
-          svg {
-            box-shadow: $shadow--three;
+          &:nth-of-type(2) {
+            top: 30px;
+            left: 30px;
+            z-index: 1;
+            height: 50%;
+            svg {
+              box-shadow: $shadow--three;
+            }
+          }
+
+          &:nth-of-type(3) {
+            top: 60px;
+            left: 60px;
+            z-index: 2;
+            height: 50%;
+            svg {
+              box-shadow: $shadow--three;
+            }
+          }
+
+          &:nth-of-type(4) {
+            top: 90px;
+            left: 90px;
+            z-index: 3;
+            height: 50%;
+            svg {
+              box-shadow: $shadow--three;
+            }
           }
         }
       }
