Updates to carousel and copy

--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -372,4 +372,20 @@
       }
     }
   }
+
+  .themes {
+    h2, p {
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    h2.section-heading {
+      margin-bottom: 16px;
+    }
+
+    .arrows {
+      margin-bottom: 124px;
+    }
+  }
 }
