--- a/src/styles/partials/_carousel.scss
+++ b/src/styles/partials/_carousel.scss
@@ -9,7 +9,7 @@ $slideHeight: 200;
   position: relative;
   width: 100%;
   margin: 0 auto;
-  overflow-y: visible;
+  // overflow-y: visible;
   // max-width: 400px;
   // left: -400px;
   height: 160px;
@@ -48,11 +48,15 @@ $slideHeight: 200;
     position: relative;
     display: flex;
     width: 100%;
-    overflow-y: visible;
+    // overflow-y: visible;
 
     &.active {
-      transition: 0.3s ease-in-out;
+      transition: 0.3s ease;
     }
+
+    // @media (min-width: 1200px) {
+    //   left: -120px;
+    // }
   }
 
   .carousel__slide {
@@ -63,15 +67,19 @@ $slideHeight: 200;
     box-shadow: none;
     z-index: 0;
     overflow: visible;
-    opacity: 0.4;
+    // opacity: 0.4;
+    perspective: 1000px;
+    visibility: hidden;
 
     svg {
-      transition: 0.6s ease-in-out;
+      transition: 0.6s ease;
+      position: relative;
+      left: 0;
     }
 
     &.middle {
       z-index: 9;
-      opacity: 1;
+      // opacity: 1;
 
       svg {
         box-shadow: $shadow--four;
@@ -80,7 +88,7 @@ $slideHeight: 200;
 
     &.edge {
       z-index: 3;
-      opacity: 0.8;
+      // opacity: 0.8;
 
       svg {
         box-shadow: $shadow--two;
@@ -88,7 +96,12 @@ $slideHeight: 200;
     }
 
     &.outer {
-      opacity: 0.6;
+      // opacity: 0.6;
+      z-index: 1;
+
+      svg {
+        box-shadow: $shadow--one;
+      }
     }
 
     &:first-child {
@@ -106,8 +119,8 @@ $slideHeight: 200;
         margin-left: -#{12 / 3 / 12 * 100%};
       }
 
-      @media (min-width: 1400px) {
-        margin-left: -#{12 / 3 / 12 * 100%};
+      @media (min-width: 1200px) {
+        margin-left: -#{12 / 5 / 12 * 100%};
       }
     }
 
@@ -139,11 +152,18 @@ $slideHeight: 200;
       max-width: #{12 / 3 / 12 * 100%};
     }
 
-    @media (min-width: 1400px) {
-      flex-basis: #{12 / 3 / 12 * 100%};
-      width: #{12 / 3 / 12 * 100%};
-      min-width: #{12 / 3 / 12 * 100%};
-      max-width: #{12 / 3 / 12 * 100%};
+    @media (min-width: 1200px) {
+      flex-basis: #{12 / 5 / 12 * 100%};
+      width: #{12 / 5 / 12 * 100%};
+      min-width: #{12 / 5 / 12 * 100%};
+      max-width: #{12 / 5 / 12 * 100%};
+
+      // &.middle {
+      //   flex-basis: #{12 / 5 / 12 * 120%};
+      //   width: #{12 / 5 / 12 * 120%};
+      //   min-width: #{12 / 5 / 12 * 120%};
+      //   max-width: #{12 / 5 / 12 * 120%};
+      // }
     }
 
     border-radius: 0;
