--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -6,9 +6,8 @@
 .home {
   .hero {
     padding-top: calc(5rem + 78px);
-    padding-bottom: 7rem;
     position: relative;
-    overflow: visible;
+    // overflow: visible;
 
     @include media-breakpoint-up(md) {
       padding-top: calc(5rem + 100px);
@@ -37,37 +36,38 @@
     .image__wrapper {
       perspective: 1000px;
       margin: 4em auto;
-      width: 100%;
+      width: 85%;
       margin-bottom: 500px;
 
-      margin-left: -40px;
+      margin-left: -20px;
+      display: none;
 
-      @include media-breakpoint-up(md) {
-        width: 85%;
-        margin-left: -60px;
-      }
-
-      @include media-breakpoint-up(md) {
+      @include media-breakpoint-up(lg) {
         width: 120%;
         margin-left: -20px;
+        display: block;
       }
     }
 
     .image__wrapper:hover {
       .image__inner {
-        transform: rotateY(-22deg) rotateX(0deg);
+        @include media-breakpoint-up(lg) {
+          transform: rotateY(-22deg) rotateX(0deg);
+        }
       }
 
       figure {
-        &:nth-of-type(2) {
-          top: -28px;
-          left: 52%;
-          z-index: 1;
-          width: 54%;
-          height: 54%;
+        @include media-breakpoint-up(lg) {
+          &:nth-of-type(2) {
+            top: -28px;
+            left: 52%;
+            z-index: 1;
+            width: 54%;
+            height: 54%;
 
-          svg {
-            box-shadow: $shadow--four;
+            svg {
+              box-shadow: $shadow--four;
+            }
           }
         }
       }
@@ -75,8 +75,12 @@
 
     .image__inner {
       transition: 0.3s;
-      transform: rotateY(-18deg);
+      transform: rotateY(0deg);
       position: relative;
+
+      @include media-breakpoint-up(lg) {
+        transform: rotateY(-18deg);
+      }
     }
 
     .image__inner figure {
