--- a/src/styles/partials/pages/_themes.scss
+++ b/src/styles/partials/pages/_themes.scss
@@ -8,7 +8,7 @@
     padding-top: calc(3rem + 78px);
     padding-bottom: 3rem;
     position: relative;
-    overflow: visible;
+    // overflow: visible;
 
     .container {
       position: relative;
