--- a/src/styles/partials/_collapse.scss
+++ b/src/styles/partials/_collapse.scss
@@ -8,7 +8,12 @@
   background: #ffffff;
   box-shadow: $shadow--one;
 
-  h3 {
+  &.outlined {
+    box-shadow: none;
+    border: 1px solid #e8e8e8;
+  }
+
+  .collapse__title {
     margin: 0;
     display: flex;
     align-items: center;
@@ -42,7 +47,7 @@
       padding-right: 2rem;
       padding-bottom: 1.5rem;
       line-height: 1.625rem;
-      opacity: .8;
+      opacity: 0.8;
       transition: 0.4s;
     }
   }
