Updates to website

--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -131,9 +131,15 @@
       margin-bottom: 3rem;
     }
 
+    [class*="col-"]:first-child, [class*="col-"]:nth-child(2) {
+      padding-bottom: 36px !important;
+    }
+
     .feature {
       padding: 0;
       text-align: center;
+      margin: 0 auto;
+      max-width: 310px;
 
       .icon {
         border-radius: $radius--two;
@@ -437,8 +443,8 @@
   }
 
   .themes {
-    padding-bottom: 8rem;
-    margin-bottom: -3rem;
+    padding-bottom: 10rem;
+    margin-bottom: -5rem;
 
     h2,
     p {
