--- a/src/styles/partials/_buttons.scss
+++ b/src/styles/partials/_buttons.scss
@@ -19,7 +19,7 @@
   width: fit-content;
   display: inline-block;
   margin-right: 1rem;
-  font-family: "Rubik", "Raleway";
+  font-family: "Rubik", "Courier New";
   font-weight: 600;
   letter-spacing: 1px;
   transition: 0.2s;
