--- a/src/styles/partials/_carousel.scss
+++ b/src/styles/partials/_carousel.scss
@@ -180,7 +180,7 @@ $slideHeight: 200;
   align-items: center;
   justify-content: center;
   width: 100%;
-  font-family: "Rubik";
+  font-family: "Rubik", "Courier New";
   font-weight: 500;
   font-size: 1.1rem;
   margin-bottom: 80px;
@@ -208,7 +208,7 @@ $slideHeight: 200;
 .carousel__control {
   background: transparent;
   border: none;
-  font-family: "Rubik";
+  font-family: "Rubik", "Courier New";
   font-weight: 500;
   font-size: 28px;
   margin: 0px 12px;
