--- a/src/styles/partials/pages/_themes.scss
+++ b/src/styles/partials/pages/_themes.scss
@@ -49,7 +49,7 @@
         text-transform: uppercase;
         background: #ffffff;
         // font-weight: bold;
-        font-family: "Rubik";
+        font-family: "Rubik", "Courier New";
         outline: none !important;
         margin: 0 !important;
         width: 100%;
