--- a/src/styles/partials/_carousel.scss
+++ b/src/styles/partials/_carousel.scss
@@ -180,7 +180,7 @@ $slideHeight: 200;
   align-items: center;
   justify-content: center;
   width: 100%;
-  font-family: "Rubik", "Courier New";
+  // font-family: "Mont", "Courier New";
   font-weight: 500;
   font-size: 1.1rem;
   margin-bottom: 80px;
@@ -197,21 +197,24 @@ $slideHeight: 200;
 .carousel__indicator {
   padding: 5px 12px 4px;
   border-radius: 999px;
-  font-size: 14px;
-  text-transform: uppercase;
-  background: #444;
-  color: white;
-  min-width: 108px;
+  font-size: 16px;
+  // text-transform: uppercase;
+  background: $color--gray-two;
+  color: $color--heading;
+  font-weight: bold;
+  min-width: 120px;
   text-align: center;
 }
 
 .carousel__control {
+  outline: none;
   background: transparent;
   border: none;
-  font-family: "Rubik", "Courier New";
-  font-weight: 500;
-  font-size: 28px;
   margin: 0px 12px;
-  color: #444444;
   cursor: pointer;
+
+  img {
+    width: 18px;
+    height: 18px;
+  }
 }
