--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -2,19 +2,13 @@
 // $color--purple-light: #bba0d6;
 // $color--purple-dark: #542c85;
 
-$color--purple: #913ea0;
-$color--purple-light: #eecff3;
-$color--purple-dark: #81338f;
-$color--orange: #faaf40;
-$color--orange-light: #eecd9d;
-$color--orange-dark: #e0761f;
-$color--pink: #e76e9b;
-$color--pink-light: #f8bbd0;
-$color--pink-dark: #d65b86;
-$color--heading: #27212b;
-$color--text:#444;
-$color--link: #50237c;
-$color--gray-one: #f2f3f7;
-$color--gray-two: #e2e3eb;
-$color--gray-three: #9a9ca1;
-$color--gray-four: #656e75;
+$color--heading: #283137;
+$color--text: #586066;
+$color--link: #4f4de3;
+$color--pink: #e34d9b;
+$color--orange: #f4ab59;
+
+$color--gray-one: #f2f4f7;
+$color--gray-two: #e5ebf1;
+$color--gray-three: #878e94;
+$color--gray-four: #283137;
