--- a/src/styles/partials/_shadows.scss
+++ b/src/styles/partials/_shadows.scss
@@ -1,4 +1,6 @@
-$shadow--one: rgba(0, 0, 0, 0.1) 1px 3px 6px, rgba(0, 0, 0, 0.06) 2px 2px 4px -1px;
-$shadow--two: rgba(0, 0, 0, 0.1) 4px 10px 15px, rgba(0, 0, 0, 0.05) 2px 4px 6px;
-$shadow--three: rgba(0, 0, 0, 0.1) 8px 20px 25px, rgba(0, 0, 0, 0.04) 6px 10px 10px -5px;
-$shadow--four: rgba(0, 0, 0, 0.25) 12px 25px 50px;
+@use "colors" as *;
+
+$shadow--one: #22222210 1px 3px 8px -4px, #22222210 1px 3px 20px -10px;
+$shadow--two: #21213120 1px 3px 24px -12px,#21213120 1px 3px 36px -18px;
+$shadow--three:#21213130 1px 3px 48px -24px,#21213130 1px 3px 60px -30px;
+$shadow--four:#28313790 1px 3px 64px -32px,#28313790 1px 3px 80px -40px;
