--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -20,6 +20,15 @@
 }
 
 @font-face {
+  font-family: "Mont";
+  src: url("/media/fonts/mont/mont.woff2") format("woff2"),
+    url("/media/fonts/mont/mont.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: "Nunito Sans";
   src: url("/media/fonts/nunito-sans/nunitosans-bold-webfont.woff2") format("woff2"),
     url("/media/fonts/nunito-sans/nunitosans-bold-webfont.woff") format("woff");
@@ -46,7 +55,7 @@
   font-display: swap;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;800&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Mont:wght@500;700;800&display=swap");
 
 html,
 body,
@@ -72,7 +81,7 @@ h5,
 h6 {
   color: $color--heading;
   font-weight: 600;
-  font-family: "Rubik", "Raleway";
+  font-family: "Mont", "Raleway";
   margin-bottom: 1.125rem;
 
   &.display {
@@ -111,7 +120,7 @@ p {
 }
 
 a {
-  color: #9e214d;
+  color: $color--link;
   font-weight: bold;
 }
 
