--- a/src/styles/partials/pages/_themes.scss
+++ b/src/styles/partials/pages/_themes.scss
@@ -17,7 +17,7 @@
 
     h1 {
       line-height: 76px;
-      background: linear-gradient(to bottom right, $color--purple-dark, $color--pink, $color--orange);
+      background: linear-gradient(to bottom right, $color--pink, $color--orange);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       text-align: center;
@@ -49,7 +49,7 @@
         text-transform: uppercase;
         background: #ffffff;
         // font-weight: bold;
-        font-family: "Rubik", "Courier New";
+        font-family: "Mont", "Courier New";
         outline: none !important;
         margin: 0 !important;
         width: 100%;
