--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -2,7 +2,7 @@
 @use "breakpoints" as *;
 
 footer.footer {
-  background: $color--gray-four;
+  background: $color--gray-five;
   padding: 1.2rem 0;
 
   p {
