--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -5,10 +5,11 @@
 $color--heading: #283137;
 $color--text: #586066;
 $color--link: #4f4de3;
-$color--pink: #e34d9b;
-$color--orange: #f4ab59;
+$color--pink: #e34e9a;
+$color--orange: #f4aa5a;
 
 $color--gray-one: #f2f4f7;
-$color--gray-two: #e5ebf1;
+$color--gray-two: #e4e9ef;
 $color--gray-three: #878e94;
-$color--gray-four: #283137;
+$color--gray-four: #4f5259;
+$color--gray-five: #283137;
